# LearnProject

./: .gitignore  README  README.md
BPA/: demo_run.py
BPA/tests/: test_bpa.py
Delaunay_Triangulation/: DelaunayTriangulation.cp37-win_amd64.pyd  setup.py  test.py
Delaunay_Triangulation/src/: delaunay_triangulation.cpp  delaunay_triangulation.h  python_wrapper.cpp
ICP/: README.md
ICP/ICP_C++/ICP/Debug/: ICP.exe.recipe  ICP.ilk  ICP.vcxproj.FileListAbsolute.txt
ICP/ICP_C++/ICP/Debug/ICP.tlog/: CL.write.1.tlog  ICP.lastbuildstate  link.write.1.tlog
ICP/ICP_C++/ICP/x64/Debug/: ICP.ilk  vc142.idb
ICP/ICP_C++/ICP/x64/Debug/ICP.tlog/: CL.command.1.tlog  CL.write.1.tlog  ICP.lastbuildstate
ICP/ICP_python/: demo_plot3d.py
LearnNotes/: 项目管理
LearnNotes/C++/: C++11基础.txt
LearnNotes/ITK/2d3d_registration/: README.md
LearnNotes/ITK/2d3d_registration/code/2D3D_registration_one_image/: CMakeLists.txt
LearnNotes/ITK/2d3d_registration/code/2D3D_registration_one_image/src/: TwoProjection2D3DRegistration.cxx  TwoProjectionRegistrationTestDriver.cxx  itkNormalizedCorrelationTwoImageToOneImageMetric.hxx  itkTwoImageToOneImageMetric.hxx  itkTwoProjectionImageRegistrationMethod.hxx
LearnNotes/ITK/2d3d_registration/code/2D3D_registration_two_image/: CMakeLists.txt
LearnNotes/ITK/2d3d_registration/code/TestPowell/: CMakeLists.txt
LearnNotes/ITK/2d3d_registration/code/TestPowell/src/: test_powell.cpp
LearnNotes/ITK/2d3d_registration/img/: BoxheadDRRFullDev1_G0.tif  BoxheadDRRFullDev1_G0_Reg.tif  BoxheadDRRFullDev1_G90.tif  BoxheadDRRFullDev1_G90_Reg.tif
LearnNotes/MedicalImage/xreg/: 2d3d_registration
LearnNotes/Python/: VTK_STL_DRR.py  nlopt_demo.py  pytho_iter.py
LearnNotes/Python/cpython_demo/: README.md
LearnNotes/Python/cpython_demo/SiddonClassLib/src/SiddonLib/: siddon_class.cuh
LearnNotes/Python/cpython_demo/SiddonPythonModule/: setup.py
LearnNotes/Python/pybind_demo/demo_add/: add_demo.py
LearnNotes/Python/pybind_demo/demo_add/src/: add.h
LearnNotes/Python/pybind_demo/demo_class/: CMakeLists.txt  add_demo.py  setup.py
LearnNotes/Python/pybind_demo/demo_class/src/: add.cpp  add.h  python_wrapper.cpp
LearnNotes/Python/tools/: README  VTK_STL_DRR.py  createGif.py  create_julia.py  cupy_mem_manage.py  demo2.py  demo_two_projection_registration.py  down_from_youtube.py  get_all_dll_files.py
LearnNotes/Shell/: 常用shell命令
LearnNotes/VTK/: vtk_camera_demo.py
LearnNotes/VTK/C++/light_demo/: CMakeLists.txt  vtk_light_demo.cxx
LearnNotes/VTK/doc/: 演示文稿1.pptx
LearnNotes/VTK/python/: axis_demo.py  cube_axes_demo.py  cylinder_demo.py  vtk_light_demo.py
LearnNotes/VTK/python/Tutorial/: step2_observer.py  step3_multiple_renderers.py  step4_multiple_actors.py
LearnNotes/cuda/chapter3/: CMakeLists.txt
LearnNotes/cuda/chapter3/src/: enum_gpu.cu
LearnNotes/cuda/chapter4/: CMakeLists.txt  test.cu
LearnNotes/cuda/chapter4/src/: julia_cpu.cu  julia_gpu.cu  test.cu
LearnNotes/cuda/chapter5/: CMakeLists.txt
LearnNotes/cuda/chapter5/common/: image.h
LearnNotes/cuda/chapter5/src/: dot.cu  ripple.cu
LearnNotes/cuda/chapter6/: CMakeLists.txt
LearnNotes/cuda/chapter6/src/: ray_noconst.cu
LearnNotes/cuda/chapter7/: CMakeLists.txt
LearnNotes/cuda/chapter7/src/: heat.cu
LearnNotes/docker/: docker常用命令解析
LearnNotes/git/: README.md  git常用命令解析
LearnNotes/面试常考算法题/: LeetCode343_IntegerBreak.py  LeetCode494_findTargetSumWays.py  README  demo_1.py  动态规划之背包问题.py  背包问题_回溯法.py
Marching_Cubes/: README.md
Marching_Cubes/MarchingCubes/: MarchingCubes.cpp  MarchingCubes.h  main.cpp
Marching_Cubes/MarchingCubes/x64/Debug/: vc141.idb
Marching_Cubes/MarchingCubes/x64/Debug/MarchingCubes.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog
Marching_Cubes/MarchingCubes/x64/Release/MarchingCubes.tlog/: CL.read.1.tlog  CL.write.1.tlog  MarchingCubes.lastbuildstate  MarchingCubes.write.1u.tlog  link.read.1.tlog
Marching_Square/: READEME  marching_square.py
MedImgAlg/BPA/: bpa.py  demo_run.py  visualizer.py
MedImgAlg/BPA/tests/: test_bpa.py
MedImgAlg/DRR/: README.md
MedImgAlg/DRR/code/: CMakeLists.txt  load_drr_show.py
MedImgAlg/DRR/code/SiddonLib/: siddon_class.cu  siddon_class.cuh  test.cxx
MedImgAlg/Delaunay_Triangulation/src/: delaunay_triangulation.cpp  delaunay_triangulation.h
MedImgAlg/ICP/: README.md
MedImgAlg/ICP/ICP_C++/: README.md
MedImgAlg/ICP/ICP_C++/ICP/: ICP.sln  ICP.vcxproj  ICP.vcxproj.filters  main.cpp
MedImgAlg/ICP/ICP_C++/ICP/Debug/: vc142.idb
MedImgAlg/ICP/ICP_C++/ICP/Debug/ICP.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
MedImgAlg/ICP/ICP_C++/ICP/x64/Debug/: ICP.exe.recipe  ICP.vcxproj.FileListAbsolute.txt
MedImgAlg/ICP/ICP_C++/ICP/x64/Debug/ICP.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MedImgAlg/ICP/ICP_C++/src/: ICP.cpp  ICP.h
MedImgAlg/ICP/ICP_python/: iterative_closest_point.py
MedImgAlg/Marching_Cubes/: README.md
MedImgAlg/Marching_Cubes/MarchingCubes/: MarchingCubes.cpp  MarchingCubes.vcxproj  MarchingCubes.vcxproj.filters
MedImgAlg/Marching_Cubes/MarchingCubes/x64/Debug/MarchingCubes.tlog/: CL.command.1.tlog  MarchingCubes.lastbuildstate  link.read.1.tlog  link.write.1.tlog
MedImgAlg/Marching_Cubes/MarchingCubes/x64/Release/MarchingCubes.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MedImgAlg/Marching_Cubes/x64/Debug/: MarchingCubes.ilk
MedImgAlg/Marching_Cubes/x64/Release/: MarchingCubes.iobj  MarchingCubes.ipdb
git/: git常用命令解析
pybind_demo/: README.txt  test_example.py
pybind_demo/csrc/: example.cpp  setup.py  test_numpy.cpp
pybind_demo/demo_add/src/: add.cpp  python_wrapper.cpp
tools/: demo.py  down_dataset.py  get_all_dll_files.py
面试常考算法题/: LeetCode131_分割回文字符串.py  LeetCode77_基本排列组合问题.py  README  动态规划之背包问题.py  基于two_pass的连通区域分析.py  背包问题_回溯法.py  连续子数组最大和问题.py
